# GeoBot_mestrado

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCUMENTACAO.md  FASE_2_COMPLETA.md  FASE_3_COMPLETA.md  GUIA_TESTES_FASE2.md  IMPLEMENTATION_SUMMARY.md  INICIAR_GEOBOT.bat  INSTALAR.bat  LICENSE  OTIMIZACOES_GPU.md  PREPARACAO_GITHUB.md  PREPARAR_GITHUB.ps1  PROJECT_STRUCTURE.md  PRONTO_PARA_PUSH.md  QUICKSTART.md  QUICK_START_FASE2.md  README.md  RESUMO_EXECUTIVO_FASE2.md  RESUMO_IMPLEMENTACAO_FASE2.md  TESTING_CHECKLIST.md  USER_GUIDE.md  generate_example_data.py  generate_realistic_data.py  geobot.py  geobot_optimizations.py  playwright.config.ts  rag_engine.py  rag_update.py  requirements.txt
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/_archived/core/: plugin_system.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: ai.py  chat.py  config.py  data.py  plugins.py  processing.py  projects.py  rag.py  scripting.py  templates.py  (+1 more)
backend/app/core/: config.py  logging_config.py  performance.py  sentry.py  templates.py
backend/tests/: __init__.py  conftest.py
backend/tests/benchmark/: performance_benchmark.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_chat_service.py  test_filters.py  test_geophysics_gravity.py  test_geophysics_magnetic.py  test_magnetic_refactored.py  test_processing_engine.py  test_provider_manager.py  test_rag_engine.py
backend/tests/validation/: test_scientific_validation.py
(+73 files in other folders)
